# modernopengl

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: circle.frag  circle.vert  core.frag  core.vert  rect.frag  rect.vert  text.frag  text.vert
sandbox/: Game.cpp  Game.h  GameObject.h  Resources.h  main.cpp
src/: ResourceManager.cpp  ResourceManager.h
src/batch/: BatchInterface.h  ConvexBatch.cpp  ConvexBatch.h  TextureBatch.cpp  TextureBatch.h
src/components/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/mesh/: CircleMesh.h  ConvexMesh.h  ConvexVertex.h  RectangleMesh.h  TextMesh.cpp  TextMesh.h  TextureMesh.cpp  TextureMesh.h  TextureVertex.h
src/render/: RenderData.h  Renderer.cpp  Renderer.h
src/sdl/: SDL.cpp  SDL.h  SDLContext.cpp  SDLContext.h  SDLWindow.cpp  SDLWindow.h
src/util/: Font.h  Glyph.h  Rect.h  RenderQueue.h  Types.h
